closing feature #300. Now, only one result page is used for both search (classical and Pdc from footer). Marking redden results has been improved.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1407 a8e77078-a1c7-4fa5-b8fc-53c5178a176c